# Connecting

./: .gitignore  README.md  README_zh.md  architecture_direction.md  current_architecture_guide.md  current_architecture_guide_zh.md  desktop_video_unity_pose_demo.md  development_journal.md  development_journal_zh.md  documentation_zh_index.md  immersive_projection_pathfinding_log_zh.md  immersive_video_display_plan_zh.md  phase1_native_plan.md  phase1_native_plan_zh.md  pico4_ultra_device_bringup.md  pico4_ultra_device_bringup_zh.md  startup_profiles_guide_zh.md  unity_editor_playmode_debug_recap_zh.md
android-native/: CMakeLists.txt  OPENXR_SETUP.md  README.md  settings.gradle
android-native/app/: build.gradle  proguard-rules.pro
android-native/app/src/main/: AndroidManifest.xml
android-native/app/src/main/cpp/: CMakeLists.txt  amedia_h264_decoder.cpp  amedia_h264_decoder.h  egl_context.cpp  egl_context.h  openxr_pose_sender.cpp  runtime_config_store.cpp  runtime_config_store.h  udp_encoded_video_receiver.cpp  udp_encoded_video_receiver.h  udp_pose_sender.cpp  udp_pose_sender.h  udp_video_receiver.cpp  udp_video_receiver.h  xr_pose_runtime.cpp  xr_pose_runtime.h
pc-unity-app/Assets/Editor/: UnitySenderProjectSetup.cs
pc-unity-app/Assets/Scenes/: SampleScene.unity
pc-unity-app/Assets/Scripts/Native/: UnitySenderPluginBindings.cs
pc-unity-app/Assets/Scripts/Streaming/: UnitySenderController.cs  UnitySenderLaunchOptions.cs  UnitySenderRuntimeEndpointStore.cs
pc-unity-app/ProjectSettings/: ProjectSettings.asset
shared-protocol/: README.md  control_protocol.h  packet_defs.h  pose_protocol.h  time_sync.h  video_protocol.h
tools/: README.md  start_desktop_only.ps1  start_mixed_demo.ps1  start_stream_profile.ps1  start_unity_editor_direct.ps1  start_unity_editor_projection_mono.ps1  start_unity_editor_projection_stereo.ps1  sync_editor_runtime.ps1
tools/profiles/: desktop_only.json  mixed_demo.json  unity_editor_direct.json  unity_editor_projection_mono.json  unity_editor_projection_stereo.json
unity-integration/: README.md  UnitySenderPluginBindings.cs
windows-native/: CMakeLists.txt  README.md
windows-native/include/: udp_pose_receiver.h  unity_sender_plugin.h  video_sender_core.h
windows-native/src/: desktop_capture_nvenc_sender.cpp  main.cpp  mock_pose_sender.cpp  mock_video_sender.cpp  nvenc_video_sender.cpp  pose_scene_nvenc_sender.cpp  udp_pose_receiver.cpp  unity_sender_plugin.cpp  video_sender_core.cpp
